[tool.poetry]
name = "procon_python"
version = "0.1.0"
description = ""
authors = ["Makoto Kirihata <makotokirihata@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.4"
scipy = "^1.4.1"
matplotlib = "^3.2.1"
pandas = "^1.0.3"
ipynb = "^0.5.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
